fixed images not showing

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -100,6 +100,7 @@ input[type=button] {
   border-radius: 5px;
   padding: 5px 10px;
   font-weight: 600;
+  cursor: pointer;
 }
 
 .primary {
@@ -118,6 +119,8 @@ input[type=button] {
 
 .gallery {
   height: 600px;
+  display: flex;
+  align-items: center;
 }
 
 .gallery-row {
@@ -130,9 +133,17 @@ input[type=button] {
 .img {
   width: 250px;
   height: 300px;
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2);
+  max-width: 100%;
+  height: auto;
+  cursor: pointer;
 }
 
 footer {
   height: 50px;
-  background-color: #606066;
+  background-color: #d47381a9;
+  font-weight: bold;
+  display: flex;
+  justify-content: right;
+  align-items: end;
 }
